# crm

./: .env_template  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
crm/accounts/: apps.py  urls.py  views.py
crm/ads/: admin.py  apps.py  models.py  service.py  urls.py  views.py
crm/ads/migrations/: 0001_initial.py  0002_alter_ads_budget.py  0003_alter_ads_options.py
crm/contracts/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
crm/contracts/migrations/: 0001_initial.py  0002_contract_uuid_alter_contract_end_date.py  0003_alter_contract_end_date.py  0004_alter_contract_options_contract_archived.py  0005_alter_contract_managers.py  0006_alter_contract_archived.py  0007_alter_contract_archived.py  0008_remove_contract_archived.py  0009_contract_archived.py  0010_alter_contract_archived.py  0011_alter_contract_archived.py
crm/crm/: celery.py  config.py  settings.py  urls.py
crm/customers/: admin.py  apps.py  models.py  urls.py  views.py
crm/customers/migrations/: 0001_initial.py  0002_remove_customer_lead_contract_unique_and_more.py  0003_remove_customer_lead_contract_unique_and_more.py  0004_alter_customer_contract_alter_customer_lead.py  0005_alter_customer_options.py
crm/leads/: admin.py  apps.py  models.py  urls.py  views.py
crm/leads/migrations/: 0001_initial.py  0002_alter_lead_options.py
crm/products/: admin.py  apps.py  models.py  urls.py  views.py
crm/products/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_cost.py  0002_product_delete_service.py  0004_alter_product_cost.py  (+1 more)
(+3 files in other folders)
