[tool.poetry]
name = "crm"
version = "0.1.0"
description = ""
authors = ["nachi <serg.serg2006@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
pydantic-settings = "^2.6.1"
celery = {extras = ["redis"], version = "^5.4.0"}
psycopg-binary = "^3.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
