[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
pydantic-settings = "^2.6.1"
celery = {extras = ["redis"], version = "^5.4.0"}
psycopg-binary = "^3.2.3"
psycopg = "^3.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
